--- a/OrderManagementSystem.Web/appsettings.json
+++ b/OrderManagementSystem.Web/appsettings.json
@@ -5,5 +5,37 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "System": "Warning",
+        "Microsoft": "Warning",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "Data Source=Areege;Initial Catalog=OrderManagementSystem ;Integrated Security=True;Encrypt=True;Trust Server Certificate=True",
+          "sinkOptionsSection": {
+            "tableName": "Logs",
+            "autoCreateSqlTable": true
+          }
+        }
+      }
+    ],
+    "Properties": {
+      "Application": "OrderManagementSystem",
+      "Server": "MyLaptop"
+    }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=Areege;Initial Catalog=OrderManagementSystem ;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+  }
 }
