feat(auth): implement user registration and login

--- a/OrderManagementSystem.Web/appsettings.json
+++ b/OrderManagementSystem.Web/appsettings.json
@@ -37,5 +37,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=Areege;Initial Catalog=OrderManagementSystem ;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+  },
+  "JWT": {
+    "Key": "",
+    "Issuer": "https://localhost:7176/",
+    "Audience": "http://localhost:4200/",
+    "AccessTokenExpirationMinutes": 15
   }
 }
