feat(notification): implement order status email notifications using MailKit

--- a/OrderManagementSystem.Web/appsettings.json
+++ b/OrderManagementSystem.Web/appsettings.json
@@ -35,6 +35,13 @@
     }
   },
   "AllowedHosts": "*",
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SenderEmail": "areege162002@gmail.com",
+    "SenderName": "OrderSystem-Mail",
+    "SenderPassword": ""
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=Areege;Initial Catalog=OrderManagementSystem ;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
   },
